added my default stuff

--- a/default.hbs
+++ b/default.hbs
@@ -16,12 +16,12 @@
 <meta name="twitter:title" content="{{title}}">
 <meta name="twitter:description" content="{{excerpt}}">
 <meta name="twitter:creator" content="{{author.name}}">
-<meta name="twitter:image:src" content="{{! TODO: ADD GRAVATAR URL HERE }}">
+<meta name="twitter:image:src" content="http://www.gravatar.com/avatar/de178c3397ad370c093018245aa6b3c1.png">
 
 <meta property="og:type" content="article">
 <meta property="og:title" content="{{@blog.title}}">
 <meta property="og:description" content="{{excerpt}}">
-<meta property="og:image" content="{{! TODO: ADD GRAVATAR URL HERE }}">
+<meta property="og:image" content="http://www.gravatar.com/avatar/de178c3397ad370c093018245aa6b3c1.png">
 <meta property="og:site_name" content="{{@blog.title}}">
 {{/post}}
 {{else}}
@@ -30,12 +30,12 @@
 <meta name="twitter:title" content="{{@blog.title}}">
 <meta name="twitter:description" content="{{@blog.description}}">
 <meta name="twitter:creator" content="{{@blog.title}}">
-<meta name="twitter:image:src" content="{{! TODO: ADD GRAVATAR URL HERE }}">
+<meta name="twitter:image:src" content="http://www.gravatar.com/avatar/de178c3397ad370c093018245aa6b3c1.png">
 
 <meta property="og:type" content="article">
 <meta property="og:title" content="{{@blog.title}}">
 <meta property="og:description" content="{{@blog.description}}">
-<meta property="og:image" content="{{! TODO: ADD GRAVATAR URL HERE }}">
+<meta property="og:image" content="http://www.gravatar.com/avatar/de178c3397ad370c093018245aa6b3c1.png">
 <meta property="og:site_name" content="{{@blog.title}}">
 {{/if}}
 
@@ -81,8 +81,7 @@
     <div class="footer-nav"><p>{{@blog.title}}</p></div>
 
     <aside class="offsite-links">
-        <a class="twitter-link" href="http://www.twitter.com/{{! TODO: ADD TWITTER HANDLE HERE }}">Twitter</a> /
-        <a class="github-link" href="http://github.com/{{! TODO: ADD GITHUB HANDLE }}">GitHub</a> / 
+        <a class="github-link" href="http://github.com/kwangbkim">GitHub</a> / 
         <a class="rss-link" href="{{ @blog.url }}/rss">RSS</a>
         <p>
         <a target="_blank" href="https://github.com/roycehaynes/rollsroyce">rollsroyce theme</a> by <a target="_blank" href="http://www.twitter.com/roycehaynes">@roycehaynes</a>
@@ -99,7 +98,7 @@
 <script type="text/javascript" src="{{ asset 'js/app.js' }}"></script>
 <script type="text/javascript" src="{{ asset 'js/respond.min.js' }}"></script>
 <script type="text/javascript">
-  var ga_ua = '{{! TODO: SET GOOGLE ANALYTICS ID }}';
+  var ga_ua = 'UA-33849191-1';
 
   (function(g,h,o,s,t,z){g.GoogleAnalyticsObject=s;g[s]||(g[s]=
       function(){(g[s].q=g[s].q||[]).push(arguments)});g[s].s=+new Date;
